Fix "Undo" crash after changing selection mode

Patch by Igor Poboiko, thanks!
BUG: 211481

svn path=/trunk/KDE/kdegraphics/kolourpaint/; revision=1137954